--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.3.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.4.0",
     "socket.io": "^2.3.0"
   }
